# crowdfunding

./: README.md
crowdfunding/: README.rst  __manifest__.py
crowdfunding/controllers/: main.py  payment.py
crowdfunding/data/: product_product.xml
crowdfunding/i18n/: crowdfunding.pot
crowdfunding/migrations/18.0.1.0.0/: pre-migration.py
crowdfunding/models/: account_move.py  crowdfunding_challenge.py  crowdfunding_tag.py  payment_transaction.py
crowdfunding/readme/: CONFIGURE.md  CONTRIBUTORS.md  USAGE.md
crowdfunding/static/description/: index.html
crowdfunding/templates/: crowdfunding_challenge.xml  payment.xml
crowdfunding/tests/: __init__.py  test_crowdfunding_backend.py  test_crowdfunding_frontend.py
crowdfunding/views/: account_move.xml  crowdfunding_challenge.xml  crowdfunding_tag.xml  payment_transaction.xml  res_config_settings.xml
crowdfunding/wizards/: crowdfunding_invoicing_wizard.py  crowdfunding_invoicing_wizard.xml
crowdfunding_claim/: README.rst
crowdfunding_claim/controllers/: main.py
crowdfunding_claim/static/description/: index.html
crowdfunding_claim/templates/: crowdfunding_challenge.xml
crowdfunding_demo/: README.rst  __manifest__.py
crowdfunding_demo/demo/: product_product.xml
crowdfunding_demo/static/description/: index.html
crowdfunding_public_pledge/: README.rst
crowdfunding_public_pledge/controllers/: __init__.py  crowdfunding.py
crowdfunding_public_pledge/i18n/: it.po
crowdfunding_public_pledge/templates/: crowdfunding_challenge.xml
setup/_metapackage/: pyproject.toml
(+5 files in other folders)
