[project]
name = "odoo-addons-oca-crowdfunding"
version = "18.0.20260424.0"
dependencies = [
    "odoo-addon-crowdfunding==18.0.*",
    "odoo-addon-crowdfunding_demo==18.0.*",
    "odoo-addon-crowdfunding_public_pledge==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
